# filet

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Makefile  README.md  README.rst  build.py  cpputils.py  noxfile.py  pyproject.toml
cpputils/: bindings.cpp  bindings.hpp  datetime_utils.cpp  datetime_utils.hpp  eval_csv.cpp  eval_datetime.cpp  eval_json.cpp  eval_json.hpp  eval_type.cpp  logging.hpp  string_operations.cpp  string_operations.hpp
cpputils/tests/: catch2.hpp  test_datetime_utils.cpp  test_eval_csv.cpp  test_eval_json.cpp  test_main.cpp
docs/: Makefile  conf.py  coverage.rst  index.rst  make.bat  modules.rst  reference.rst  usage.rst
docs/_static/: basic.css
docs/scripts/: bump_module.py  patch_module.py
filet/: __init__.py  __main__.py
filet/boto3/: __init__.py  async_handler.py  chunk_download.py  fetch_s3_sources.py  multipart_upload.py  recursive_explode_table.py  schema.py  types.py  utils.py
filet/cli/: global_options.py  stage.py
filet/cli/utils/: __init__.py  loading_animation.py  prompt_toolkit_selection.py  to_ansi.py
filet/config/: __init__.py  boto3_client.py  cache_db.py  default_config.ini  objects_pattern.py  trino_client.py
filet/config/utils/: default_config.py  indexer.py  persistent_model.py  setup_logging.py
filet/core/: create_schema.py  stage_table.py  type_mapping.py
filet/core/csv/: raw_csv.py
filet/core/json/: avro.py  avro_schema_handler.py  flat.py  json_fix_handler.py  txt.py  utils.py
filet/core/utils/: recursive_explode_flatten_dataframe.py
filet/patches/: __init__.py  pydantic.py  pydantic_validator.py  typer.py  typer_cli_wrapper.py
filet/patches/utils/: check_type.py
lib/: Makefile
tests/: Makefile  generate_data.py  test_cli.py  test_eval_csv.py  test_eval_datetime.py  test_eval_type.py  test_flat_json.py  test_json_eval.py  test_json_table_sql.py  test_staging.py
